--- a/style.css
+++ b/style.css
@@ -24,15 +24,81 @@
     padding-left: 1rem;
 }
 
+.worldnews-logo{
+    height: 10vh;
+}
+
+
+a {
+    color: #000000 !important;
+    text-decoration: none;
+}
+
+a:hover {
+    color:#000000 !important; 
+    text-decoration:none; 
+    cursor:pointer;  
+}
 .dropdown-toggle{
     padding-right: 1rem;
 }
 
 .topnews-header{
-    height: 5rem;
-    width: 90vw;
+    height: 70vh ;
+    width: 100vw;
     display: flex;
-    border-bottom: 1px solid grey;
+    background: rgb(248, 248, 248);
+    flex-wrap: wrap;
+}
+
+.hero-left{
+    height: 70vh;
+    width: 50vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding-left: 7.5vw;
+}
+
+.hero-left__header{
+    font-family: 'Red Hat Display', sans-serif;
+    font-weight: 600;   
+    font-size: 5rem; 
+    width: 10ch;
+}
+.hero-left__p{
+    font-family: 'Red Hat Display', sans-serif;
+    font-weight: 400;   
+    font-size: 1.2rem; 
+    width: 40ch;
+    margin-left: -7rem;
+    padding-top: 1.5rem;
+    text-align: center;
+}
+
+.scroll-down{
+    margin-top: 2rem;
+    height: 30px;
+    margin-left: -5rem;
+}
+
+.hero-right{
+    height: 70vh;
+    width: 50vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.hero-right__img{
+    height: 55vh;
+    width: 35vw;
+    background: url(./img/world-news__paper.png);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+
 }
 
 .topnews-text{
@@ -89,13 +155,124 @@
 }
 
 .about{
-    height: 50vh;
+    min-height: 80vh;
     width: 100vw;
+    background: rgb(248, 248, 248);
+    display: flex;
+    flex-direction: column;
+}
+.about-us__header{
+    height: 10vh;
+    width: 100vw;
+    display: flex;
+    align-items: flex-end ;
+    justify-content: center;   
+    font-family: 'Red Hat Display', sans-serif;
+    font-weight: 600;
 }
 
-.about-div{
-    height: 30%;
+.about-us__cards{
+    height: 70vh;
+    width: 100vw;
+    display: grid;
+    grid-template-columns: repeat(11, 1fr);
+    grid-template-rows: repeat(8, 1fr);
+    
 }
+
+.about-us__individual-1{
+    grid-column: 2/5;
+    grid-row: 2/8;
+    background: rgb(250, 250, 250);
+    border-radius: 1rem;
+    margin: 5%;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    justify-content: space-evenly;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+}
+
+.about-us__individual-2{
+    grid-row: 2/8;
+    grid-column: 5/8;
+    background: rgb(250, 250, 250);
+    border-radius: 1rem;
+    margin: 5%;
+    display: flex;
+    text-align: center;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    justify-content: space-evenly;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+}
+    
+
+.about-us__individual-3{
+    grid-row: 2/8;
+    grid-column: 8/11;
+    background: rgb(250, 250, 250);
+    border-radius: 1rem;
+    margin: 5%;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    justify-content: space-evenly;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+}
+
+.about-img{
+    height: 6rem;
+    border-radius: 4rem;
+}
+
+.about-h1{
+    font-family: 'Red Hat Display', sans-serif;
+    font-weight: 600;
+    font-size: 1.8rem;
+    padding-top: 1.5rem;
+}
+.about-p{
+    padding-top: 1rem;
+    width: 15rem;
+    font-family: 'Red Hat Display', sans-serif;
+    font-weight: 400;
+}
+
+/* .about{
+    min-height: 60vh;
+    width: 100vw;
+    background: rgb(245, 245, 245);
+}
+
+.about-us{
+    height: 10vh;
+}
+
+.about-us__cards{
+    height: 50vh;
+    display: flex;
+    width: 100vw;
+    flex-direction: row;
+
+}
+
+
+
+.about-div{
+    height: 100%;
+    width: 33.33%;
+    /* width: calc(100% / 3);
+    display: inline-block;
+    display: flex; */
+    /* justify-content: center;
+    align-items: center;
+} */
 
 .footer{
     height: 40vh;
